# property-management-api

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  nohup.out  pyproject.toml
.claude/: settings.json
.claude/commands/: new-endpoint.md  sync-main.md
.claude/hooks/: block-env.sh
.github/workflows/: ci.yml
app/: database.py  main.py
app/core/: config.py  dependencies.py  security.py
app/models/: owner.py  unit.py  user.py
app/repositories/: __init__.py  owner_repository.py  tenant_repository.py  unit_repository.py  user_repository.py
app/routers/: auth.py
app/schemas/: owner.py  user.py
app/services/: owner_service.py  user_service.py
migrations/: env.py
migrations/versions/: 32cfb9a48a7d_create_units_table.py  b26b44352c21_create_owners_table_and_add_owner_id_to_.py  b63ef847e9c6_seed_damal_heights_owner.py  d56bfe32591a_add_partial_unique_index_for_single_.py  f166860421d8_create_users_table.py
tests/: conftest.py  test_auth.py  test_smoke.py
